# rstaples

./: .gitignore  Cargo.toml  README.md
src/: display.rs  error.rs  file.rs  lib.rs  logging.rs  staples.rs
