[package]
name = "rstaples"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Utility functions"
repository = "https://github.com/uintptr/rstaples"
homepage = "https://github.com/uintptr/rstaples"

[dependencies]
chrono = "0.4.42"
derive_more = { version = "2.0.1", features = ["from"] }
fern = "0.7.1"
log = "0.4.28"
