[package]
name = "rstaples"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Utility functions"
repository = "https://github.com/uintptr/rstaples"
homepage = "https://github.com/uintptr/rstaples"

[dependencies]
chrono = "0.4"
derive_more = { version = "2.0", features = ["from"] }
log = "0.4"
env_logger = "0.11"
colored = "3.0"
