[package]
name = "rstaples"
version = "0.4.0"
edition = "2024"
description = "Utility functions"
homepage = "https://github.com/uintptr/rstaples"
repository = "https://github.com/uintptr/rstaples"
license = "MIT"

[dependencies]
chrono = "0.4"
colored = "3.0"
derive_more = { version = "2.1", features = ["from"] }
env_logger = "0.11"
log = "0.4"
